--- a/src/pages/all/index.less
+++ b/src/pages/all/index.less
@@ -2,13 +2,19 @@
 .all-wrap{
   height: 100vh;
   .list-container{
-  //  height: 100%;
+    height: 100%;
   //  overflow-y: auto;
     .item{
       .font-c(17px,#666);
       padding: 5px;
       text-align: center;
       border-bottom: .5px solid #efefef;
+    }
+    .refresh-box,.loading-box{
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      .font-c(16px,#cecece);
     }
   }
 }
